initial commit of web page - add index.html

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,19 @@
+<div class="text-white bg-orange-400 fixed flex flex-col md:flex-row w-full bottom-0 py-3 px-5 space-y-2 md:justify-between">
+    <div>
+        <div>Site created by Zeros && Ones</div>
+        <div>Built with <a class="hi-light-link" href="https://jekyllrb.com/">Jekyll</a> & <a class="hi-light-link" href="https://tailwindcss.com/">tailwindcss</a></div>
+    </div>
+    <div class="flex flex-row space-x-2">
+        <a href=mailto:david.glendenning@zerosandones.dev"><img class="h-8" src="{{ site.baseurl }}/assets/imgs/email-white-36dp.svg"></img></a>
+        <a href="https://github.com/zerosandones.html"><img class="h-8" src="{{ site.baseurl }}/assets/imgs/GitHub-Mark-Light-32px.png"></img></a>
+        <a href="https://twitter.com/GlendenningDave"><img class="h-8" src="{{ site.baseurl }}/assets/imgs/Twitter_Social_Icon_Circle_White.svg"></img></a>
+    </div>
+    <div>
+        <div>
+            Hosted on <a class="hi-light-link" href="https://firebase.google.com/">Firebase</a>.
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
