--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,7 @@
 
 {% include header.html %}
 
-<main
-  class="bg-teal-500 flex h-screen items-center justify-center w-full"
->
+<main class="flex h-screen items-center justify-center w-full">
   {{ content }}
 </main>
 
