--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,9 @@
-/* purgecss start ignore */
+
 @tailwind base;
 @tailwind components;
 /* purgecss end ignore */
 @tailwind utilities;
+
+.hi-light-link {
+    @apply cursor-pointer italic;
+}
